--- a/project_aiminspect.html
+++ b/project_aiminspect.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | AiM Inspect</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -97,39 +97,48 @@
       </div>
       <div class="row" id="content-row">
         <div class="col-xs-12" id="text-section">
-          <p>I am currently a UX/UI designer at <a class='link-text' href='http://homepage.aiminspections.com/' target="_blank"> Alliance Inspection Management (AiM) </a> - JDP team, striving to create several mobile applications to make car inspectors’ life easier.</p>
-          <br>
-          <p>AiM is a premier new and pre-owned vehicle inspection company with 500+ inspectors nationwide. Currently, car inspectors need to carry a heavy Toughbook, a digital camera, and a printer with them to finish each inspection. They use Toughbook to check their daily schedule and enter vehicle data; they use digital camera to capture all required pictures; and they use printer to print out condition report.</p>
-          <br>
-          <p>To make our car inspectors’ life easier, we decided to replace Toughbook and digital camera by a smartphone. We are designing two apps (eventually, they will integrate into one app) which users can check schedule, update status, and capture data more accurately and efficiently in just one device.</p>
-          <br>
-          <p>So, these two apps are the two mobile design projects I am working on now:</p>
-          <br>
-          <p class="green">AiM Schedule (In Production)</p>
-          <p>An android app which car inspectors can check their daily schedule and update their status</p>
-          <br>
-          <p class="green">AiM Inspect (Pilot)</p>
-          <p>An Android app which car inspectors can collect all vehicle information (Trim info, tire, damage, condition, pictures, etc.) and upload data to cloud.<p>
-          <br>
-          Additionally, I’m also working on the other web design project:</p>
-          <br>
-          <p class="green">CRM</p>
-          <p>A website which our customer can request inspection online, dispatch team can schedule appointment, and data management team can manage all records.</p>
-          <br>
-          <h4>Design Process</h4>
-          <img class="" src="img/pic/aim_designprocess.png"/>
+          <h3>Overview</h3>
+          <p>AiM Schedule is an Android app designed for car inspectors to check their daily schedule, look up appointment details, update inspection status, and see the time blocks for the next 5 days.</p>
+          <h3>User Group</h3>
+          <p>AiM car inspector</p>
+          <ul>
+            <li>Different experience level</li>
+            <li>Working in diverse circumstances</li>
+            <li>Not always tech-savvy</li>
+          </ul>
+          <h3>Existing Legacy System</h3>
+          <p>AiM has a set of software installed in Toughbook for auto inspection use, which has been using in the past 20 years. Currently, our car inspectors are still using one of this software in Toughbook to check their daily schedule, look up appointment detail, and update inspection status.</p>
+          <p>The main problems for existing system are:</p>
+          <ul>
+            <li>For all appointments in the same location, the user needs to navigate back and forth to gather information needed</li>
+            <li>No connection between phone and Toughbook</li>
+            <li>Appointment does not update immediately</li>
+          </ul>
 
-          <h4>My Responsibilities</h4>
-          </br>
-          <p>• Wireframe user flow, sketch ideas, create web and mobile hi-fi prototypes</p>
-          <p>• Define UX and generate UI design patterns for all products by following material design guidelines</p>
-          <p>• Data Visualization</p>
-          <p>• Flat car design</p>
-          <p>• App icon design<p>
+          <h3>Design Ideas</h3>
+          <p>Even the main functionalities will stay the same, replacing the existing system by a smart phone and redesigning the user flow will provide a better user experience and let inspectors work more efficiently:</p>
+          <ul>
+            <li>Show important data in the primary position</li>
+            <li>Group necessary information together</li>
+            <li>Integrate phone/map functionalities with the phone</li>
+            <li>Keep data up-to-date, get in-time notification for appointment update</li>
+          </ul>
 
-          <br>
-          <br>
-          <p>Due to confidentiality agreement, I cannot show my screens online. But I am willing to share more my work experiences offline!</p>
+          <h3>Design Process</h3>
+          <h5>Be empathetic - field observation</h5>
+          <p>To know more about our car inspectors’ current process, I rode along with several inspectors to observe their workflow and understand their pain points. Also, I spent sometime playing with the existing legacy system to know how it works today.</p>
+          <h5>Ideation</h5>
+          <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and used them as the base of conversation with the team.</p>
+          <h5>Prototype</h5>
+          <p>After discussing with the team, we narrowed down to 2 ideas that we want to present to users. I created hi-fi prototypes and interaction workflow for best presenting our ideas to users in the UX session.</p>
+          <h5>Evaluation</h5>
+          <p>We conduct UX session every two weeks and invite 5 real users and 2 stakeholders in house to validate our ideas. In the UX session, we would present our ideas and let users share what they like, what they don’t like, and what will make it better. After each session, we would have a quick debriefing to make sure we gathered all the information we need; and I would modify my mockups based on users’ feedback.</p>
+          <h5>Final design</h5>
+          <p>After couple rounds of UX sessions and modifications, I delivered my final design. My design follows Material Design Guidelines to provide our user a consistent user experience when navigating between different Android apps. </p>
+
+          <p><small>This is an ongoing project that we keep working with product managers, developers, quality assurance engineers, and users to make sure the app is working as what we designed. We also work on adding more features in the near future.</small></p>
+
+          <p><small>Due to confidentiality agreement, I couldn't show my works online. But I’d love to share more details offline.</small></p>
         </div>
 
       </div>
