clear up homepage

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     <div class="navbar navbar-fixed-top" role="navigation" id="navi-section">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-id">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-img" href="index.html"><img src="img/Logo1.png"/></a>
+          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbar-collapse-id">
           <ul id="navi-menu" class="nav navbar-nav">
             <!-- <li ><a href="#">Home</a></li> -->
             <li class="active"><a href="index.html">Portfolio</a></li>
@@ -50,13 +50,12 @@
       </div>
     </div>
 
-    <div id="content-section" class="container">
+    <div class="container">
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_aiminspect.html';">
               <img src="img/Project/aiminspect_grey.png">
-              <div class="project-intro">
-                <img src="img/project-bg.png">
+              <div class="project-intro text-center">
                 <div class="project-intro-text">
                   <h2>AIM Inspect</h2>
                   <p>Android App Design</p>
@@ -64,7 +63,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_aimschedule.html';">
               <img src="img/Project/aimschedule_grey.png">
               <div class="project-intro">
@@ -76,7 +75,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_aimcrm.html';">
               <img src="img/Project/aimcrm_grey.png">
               <div class="project-intro">
@@ -88,7 +87,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_giftmasters.html';">
               <img src="img/Project/giftmasters_grey.png">
               <div class="project-intro">
@@ -100,7 +99,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_kono.html';">
               <img src="img/Project/kono_grey.png">
               <div class="project-intro">
@@ -112,7 +111,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_nuwa.html';">
               <img src="img/Project/nuwa_grey.png">
               <div class="project-intro">
@@ -124,7 +123,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_clotho.html';">
               <img src="img/Project/clotho_grey.png">
               <div class="project-intro">
@@ -136,7 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_uxi.html';">
               <img src="img/Project/uxi_grey.png">
               <div class="project-intro">
@@ -148,7 +147,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_floc.html';">
               <img src="img/Project/floc_grey.png">
               <div class="project-intro">
@@ -160,7 +159,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_graphic.html';">
               <img src="img/Project/graphic_grey.png">
               <div class="project-intro">
@@ -172,7 +171,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_map.html';">
               <img src="img/Project/map_grey.png">
               <div class="project-intro">
@@ -184,7 +183,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_scistarter.html';">
               <img src="img/Project/scistarter_grey.png">
               <div class="project-intro">
@@ -196,7 +195,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_starbucks.html';">
               <img src="img/Project/fieldwork_grey.png">
               <div class="project-intro">
@@ -208,7 +207,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_infovis.html';">
               <img src="img/Project/infovis_grey.png">
               <div class="project-intro">
@@ -227,9 +226,11 @@
       <div class="container">
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
-          <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
-          <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+          <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+          <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
+
         </div>
       </div>
     </div>
@@ -240,7 +241,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/w3data.js"></script>
     <script src="js/myjs.js"></script>
 
   </body>
