--- a/project_nuwa.html
+++ b/project_nuwa.html
@@ -30,15 +30,15 @@
     <div class="navbar navbar-fixed-top" role="navigation" id="navi-section">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-img" href="index.html"><img src="img/Logo1.png"/></a>
+          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbar-collapse-id">
           <ul id="navi-menu" class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
             <li class="active"><a href="index.html">Portfolio</a></li>
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div id="content-section" class="container">
+    <div class="container">
       <div class="row" id="title-row">
         <div id="title-text-section" class="col-xs-12">
           <div><h1 class="title-text clearfix">Nuwa</h1><h3 class='subtitle-text'>CHI 2014 Student Design Competition</h3></div>
@@ -159,9 +159,10 @@
       <div class="container">
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
-          <a href="http://instagram.com/yuhsuanl" target="_blank"><img src="img/social/Instagram.png" class="social-icon" /></a>
-          <a href="https://www.facebook.com/yuhsuanlin616" target="_blank"><img src="img/social/facebook.png" class="social-icon" /></a>
+          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
+          
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
       </div>
     </div>
